// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Member renders with links 1`] = `
<div
  className="member col-xs-12 col-md-6 col-lg-4"
  itemProp="employee"
  itemScope={true}
  itemType="http://schema.org/Person"
>
  <img
    alt="Example"
    className="member__portrait"
    src="image.jpg"
  />
  <div
    className="member__text"
  >
    <h2>
      <small
        itemProp="jobTitle"
      >
        Bazzer
      </small>
       
      <span
        itemProp="name"
      >
        Foo Bar
      </span>
    </h2>
    <h3>
      Funny dude
    </h3>
    <p>
      Content
    </p>
    <p>
      <a
        href="/foo"
        itemProp="sameAs"
      >
        Foo
      </a>
      , 
      <a
        href="/bar"
        itemProp="sameAs"
      >
        Bar
      </a>
    </p>
  </div>
</div>
`;

exports[`Member renders without links 1`] = `
<div
  className="member col-xs-12 col-md-6 col-lg-4"
  itemProp="employee"
  itemScope={true}
  itemType="http://schema.org/Person"
>
  <img
    alt="Example"
    className="member__portrait"
    src="image.jpg"
  />
  <div
    className="member__text"
  >
    <h2>
      <small
        itemProp="jobTitle"
      >
        Bazzer
      </small>
       
      <span
        itemProp="name"
      >
        Foo Bar
      </span>
    </h2>
    <h3>
      Funny dude
    </h3>
    <p>
      Content
    </p>
    <p />
  </div>
</div>
`;
